--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,7 +3,7 @@
 #
 
 headermenu:
-    cover-letter: https://drive.google.com/file/d/1W4KvkGO3EF9MLZ2W9LyqaEirBhUygIV8/view?usp=sharing
+    cover-letter: https://drive.google.com/file/d/1NEh8dclpu65rqo6BNv-ihW2zmDmIaU6i/view?usp=sharing
 
 sidebar:
     about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
@@ -19,14 +19,14 @@ sidebar:
     phone: +6422 496 9030
     address: 8 Rachel Place, Avonhead, Christchurch
     youtube: Video CV
-    youtube-link: https://youtu.be/0dMPPzK4uW4
+    youtube-link: https://youtu.be/oiPoiaduO7o
     linkedin: zould1618
     linkedin-link: https://id.linkedin.com/in/zould1618
     github: hz81
     github-link: https://github.com/hz81
     website: Herry's CV
-    website-link: https://sa1.hzy10.com
-    download-pdf: https://drive.google.com/file/d/1SDosAJwEz52YUvqZWN35Vrk9oDxMfccT/view?usp=sharing
+    website-link: https://se1.hzy10.com
+    download-pdf: https://drive.google.com/file/d/1d_E12z3DRP0NObQTzp4HV8hJMQI8s4zm/view?usp=sharing
 
     characters:
       title: Characters
