--- a/_data/data.yml
+++ b/_data/data.yml
@@ -11,7 +11,7 @@ sidebar:
 
     # Profile information
     name: Herry Zhouldy
-    tagline: A versatile yet down-to-earth <b>Systems Engineer</b> who loved to learn and not afraid to roll up his sleeve
+    tagline: <em>A versatile yet down-to-earth</em><h3 class="tagline-highlight">Systems Engineer</h3><em>who loved to learn and not afraid to roll up his sleeve</em>
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
