--- a/_data/data.yml
+++ b/_data/data.yml
@@ -23,8 +23,8 @@ sidebar:
     github: hz81
     github-link: https://github.com/hz81
     website: Herry's CV
-    website-link: https://se0011.hzy10.com
-    download-file: https://1drv.ms/w/s!AvF_WyEroz-p0ehSfrM7iUSrsdW4RA?e=4kQKM4
+    website-link: https://se001.hzy10.com
+    download-file: https://1drv.ms/w/s!AvF_WyEroz-p0elDB4oFXictP36sCw?e=giSqUn
 
     characters:
       title: Characters
